$Id$

History for IMDBPHP2
====================

v2.1.5
-------------------
! fixed "undefined index" error in imdb::episodes()
! site changes completely broke search -- quickfix (hopefully working in all cases)

v2.1.4 (20.09.2012)
-------------------
! imdb::movietype() could no longer distinguish between TV Movie and TV Serie (site changes)
! imdb::is_serial() invalidated by site changes
! imdb::movieconnection() was broken due to site changes
! imdb_person::born() and imdb_person::died() suddenly missed day and month (site change; thanks to GeorgeFive for the fix!)
* test suite needed a minor update: our example "uncompleted" movie was completed meanwhile, so the test erraneously reported failure
+ imdb::trailers() was incomplete. Thanks to george (ticket:286) it now should fetch more, and I also added the possibility to decide whether to restrict trailers to on-site ones
* imdb::plotoutline(): removing extra HTML tags from around the storyline

v2.1.3 (15.04.2012)
-------------------
! some redirects have not been handled correctly (i.e. when IMDBID xxxxxxx was re-routed to yyyyyyy)
! imdb::is_serial() and imdb::get_episode_details() were broken due to site changes
! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
  the outer array no longer starts at 0 but reflects the real season number (as often requested)!
+ imdb::get_episode_details() - added "airdate" as requested by ticket:290
! imdb::goofs() and imdb::crazy_credits() where broken due to site changes
* some adjustments to imdb::trivia - spoilers are now avoided by default. Pass TRUE as only argument to retrieve them separately.
+ some enhancements to genre retrieval (thanks to George!) - now there will be more genres reported :)

v2.1.2 (19.01.2012)
-------------------
! site changes broke the imdb class methods keywords(), seasons(), languages(), mpaa_reason(), goofs()
! site changes confused imdb::extReviews(), imdb::videosites()